// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global.SignInUp.UpdateForm component renders correctly when mode is existing 1`] = `
<form
  autoComplete="off"
  className="sign-in-up-update"
  method="post"
  onSubmit={[Function]}
>
  <div>
    <h4
      className="form-heading"
    >
      Hello,
       
      <span
        className="nickname"
      >
        Rowan
      </span>
      .
    </h4>
    <p
      className="overlay-copy"
    >
      Would you like to update your Nickname?
    </p>
  </div>
  <div
    className="row-1-p"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <input
        id="update-nickname"
        name="nickname"
        onChange={[Function]}
        placeholder="Nickname"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="row-1-p"
  >
    <p
      className="overlay-copy"
    >
      Do you want to edit your account information?
    </p>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        First Name
      </label>
      <input
        id="update-firstName"
        name="firstName"
        onChange={[Function]}
        placeholder="First name"
        type="text"
        value="Rowan"
      />
    </div>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        Last Name
      </label>
      <input
        id="update-lastName"
        name="lastName"
        onChange={[Function]}
        placeholder="Last name"
        type="text"
        value="Ida"
      />
    </div>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        Email
      </label>
      <input
        id="update-email"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        type="text"
        value="test@cic-fake.gotcha"
      />
    </div>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        Password
      </label>
      <input
        id="update-password"
        name="password"
        onChange={[Function]}
        placeholder="New password"
        type="password"
        value=""
      />
    </div>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        Confirm Password
      </label>
      <input
        id="update-passwordConfirmation"
        name="passwordConfirmation"
        onChange={[Function]}
        placeholder="Confirm new password"
        type="password"
        value=""
      />
    </div>
  </div>
  <div
    className="row-1-p"
  >
    <div
      className="form-input form-error"
    >
      <input
        className="button-secondary button-with-room"
        type="submit"
        value="Save Changes"
      />
    </div>
  </div>
</form>
`;

exports[`Global.SignInUp.UpdateForm component renders correctly when mode is new 1`] = `
<form
  autoComplete="off"
  className="sign-in-up-update"
  method="post"
  onSubmit={[Function]}
>
  <div>
    <h4
      className="form-heading"
    >
      Congratulations!
    </h4>
    <p
      className="overlay-copy"
    >
      Your account has been successfully created and you are now
                logged in to Manifold. From now on, I'm going to call you
    </p>
    <h4
      className="nickname"
    >
      Rowan
    </h4>
    <p
      className="overlay-copy"
    >
      Would you like me to call you something else?
    </p>
  </div>
  <div
    className="row-1-p"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <input
        id="update-nickname"
        name="nickname"
        onChange={[Function]}
        placeholder="Nickname"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="row-1-p"
  >
    <p
      className="overlay-copy"
    >
      Do you want to edit your account information?
    </p>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        First Name
      </label>
      <input
        id="update-firstName"
        name="firstName"
        onChange={[Function]}
        placeholder="First name"
        type="text"
        value="Rowan"
      />
    </div>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        Last Name
      </label>
      <input
        id="update-lastName"
        name="lastName"
        onChange={[Function]}
        placeholder="Last name"
        type="text"
        value="Ida"
      />
    </div>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        Email
      </label>
      <input
        id="update-email"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        type="text"
        value="test@cic-fake.gotcha"
      />
    </div>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        Password
      </label>
      <input
        id="update-password"
        name="password"
        onChange={[Function]}
        placeholder="New password"
        type="password"
        value=""
      />
    </div>
    <div
      className="form-input"
      style={Object {}}
    >
      <label>
        Confirm Password
      </label>
      <input
        id="update-passwordConfirmation"
        name="passwordConfirmation"
        onChange={[Function]}
        placeholder="Confirm new password"
        type="password"
        value=""
      />
    </div>
  </div>
  <div
    className="row-1-p"
  >
    <div
      className="form-input form-error"
    >
      <input
        className="button-secondary button-with-room"
        type="submit"
        value="Save Changes"
      />
    </div>
  </div>
</form>
`;
